Hack list: Add silent edit option

--- a/swablu/static/styles.css
+++ b/swablu/static/styles.css
@@ -306,6 +306,11 @@ input, textarea, select, button {
     max-width: 90%;
 }
 
+input[type=checkbox] {
+  display: inline;
+  width: unset;
+}
+
 textarea {
     height: 150px;
 }
